--- a/src/tiled/editterraindialog.ui
+++ b/src/tiled/editterraindialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Edit Terrains</string>
+   <string>Edit Terrain Information</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
